<resources>
    <string name="app_name">BookEase</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="create_an_naccount">Create an\nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="create_a_password">Create a password</string>
    <string name="change_password">Change Password</string>
    <string name="davao_city">Davao City</string>
    <string name="view">View</string>
    <string name="create_an_appointment">Create an appointment</string>
    <string name="schedule_your_visit_to_nearby_branches_in_ndavao_city_banks_offices_and_more">Schedule your visit to nearby branches in\nDavao City banks, offices, and more.</string>
    <string name="nearby_branches">Nearby Branches</string>
    <string name="choose_service">choose_service</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="new_appointment">New Appointment</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="branch">Branch</string>
    <string name="service">Service</string>
    <string name="book_now">Book Now</string>
    <string name="cancel">Cancel</string>
    <string name="anny_additional_details">Anny additional details?</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_a_time">Select a time</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_your_current_and_new_password">Enter your current and new password</string>
    <string name="new_password">New Password</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="email">Email</string>
    <string name="ease">Ease</string>
</resources>